# qtmvvmtoolkit

./: .gitignore  Pipfile  README.md  dev.readme.md  pyproject.toml
.github/workflows/: deploy-package.yml  release.yml
docs/: logo.pptx
samples/cases/: context.py
samples/testapp/messages/: hellomessage.py
samples/testapp/pages/: homepage.py
samples/testapp/pages/templates/: PageUser_ui.py
samples/testapp/viewmodels/: homevm.py
src/qtmvvmtoolkit/: inputs.py  messenger.py  objects.py
tests/: test_messenger_v2.py
