[project]
name = "qtmvvmtoolkit"
authors = [{ name = "victor3spoir", email = "victorespoir.dev@email.com" }]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
# license = { file = "LICENCE" }
classifiers = ["Programming Language :: Python :: 3"]

dependencies = [
    "cs-events>=0.5.0",
    "loguru>=0.7.3",
    "pyqt6>=6.8.0",
    "pyqtdarktheme>=2.1.0",
    "qtpy>=2.4.2",
]
dynamic = ["version"]


[build-system]
requires = ["setuptools>=42", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
license-files = ["LICENCE"]

[tool.setuptools_scm]
version_scheme = "post-release"


[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
    "pydantic>=2.10.4",
    "twine>=6.0.1",
]
