[project]
name = "qtmvvmtoolkit"
authors = [{ name = "victor3spoir", email = "victorespoir.dev@email.com" }]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENCE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "cs-events>=0.5.0",
    "loguru>=0.7.3",
    "pyqt6>=6.8.0",
    "pyqtdarktheme>=2.1.0",
    "qtpy>=2.4.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/victor3spoir/qtmvvmtoolkit"
Repository  = "https://github.com/victor3spoir/qtmvvmtoolkit"
Issues = "https://github.com/victor3spoir/qtmvvmtoolkit/issues"


[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
license-files = ["LICENCE"]


[tool.setuptools_scm]
version_scheme = "release"
local_scheme = "release"


[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
    "pydantic>=2.10.4",
    "twine>=6.0.1",
    "setuptools>=75.6.0",
    "setuptools-scm>=8.1.0",
]
